--- a/TODO
+++ b/TODO
@@ -1,10 +1,6 @@
 - [ ] admin 更新题目,就用problem_create.pug,不过要处理可以更新题面,不更新数据的情况,这里使用询问框:是否不上传数据
 - [ ] 完善sublist的查询
 - [ ] 注意button全部用sub页面的 [复制] 的样式替换了
-- [ ] minibbs的实现
-    - 留言功能 https://github.com/th720309/node_bbs
-    - 像loj一样只有1层留言 ?
-    - 像node_club 一样来设计,分类
 - [ ] 实现标签功能
     - [ ] 基础 ? 如何在mongodb中快速的利用标签来搜索,聚合?
         - https://developer.aliyun.com/article/6146
@@ -15,6 +11,12 @@
         - > https://codepen.io/ey_intuitive/pen/bEQpqP
     - [ ] 实现题目搜索功能                                                                                                                            |
         - [x] 使用 https://github.com/iinitd/racci
+- [ ] minibbs的实现
+    - [ ] 留言功能 https://github.com/th720309/node_bbs
+    - [ ] 像loj一样只有1层留言 ?
+    - [ ] 像node_club 一样来设计,分类
+    - [ ] bbs_post页面,创建题目解析的细节
+        -[ ] 题目的名称,pid
 +--------------------------------------------------------------------------------------------废弃-----------------------------------------------+
 |   - [ ] 实现题目搜索功能                                                                                                                            |
 |       - [x] 下载nodejieba,分词的方法如下                                                                                                             |
