--- a/TODO
+++ b/TODO
@@ -14,9 +14,10 @@
 - [ ] minibbs的实现
     - [ ] 留言功能 https://github.com/th720309/node_bbs
     - [ ] 像loj一样只有1层留言 ?
-    - [ ] 像node_club 一样来设计,分类
-    - [ ] bbs_post页面,创建题目解析的细节
-        -[ ] 题目的名称,pid
+    - [x] 像node_club 一样来设计,分类
+    - [x] bbs_post页面,创建题目解析的细节
+        -[x] 题目的名称,pid
+    - [x] 点赞功能的实现
 +--------------------------------------------------------------------------------------------废弃-----------------------------------------------+
 |   - [ ] 实现题目搜索功能                                                                                                                            |
 |       - [x] 下载nodejieba,分词的方法如下                                                                                                             |
