fix topic 排序的问题

--- a/TODO
+++ b/TODO
@@ -11,10 +11,43 @@
         - > https://codepen.io/ey_intuitive/pen/bEQpqP
     - [ ] 实现题目搜索功能                                                                                                                            |
         - [x] 使用 https://github.com/iinitd/racci
-- [ ] 细节
-    - [ ] 用户userinfo 显示自己的所有的文章
-    - [ ] 首页显示 最新的文章
-    - [ ] 题目显示相关的讨论
+标签功能描述
+
+## 给题目添加tag的页面
+
++----------------------------------+
+| 已经选中的tag
++----------------------------------+
+
+
++----------------------------------+
+| input filter
++----------------------------------+
+
+候选的全部tag,点击选中
+
+Buttons
+
+
+
+## 创建了tag的页面
+
++----------------------------------+
+| input name
++----------------------------------+
+
++----------------------------------+
+|   描述
++----------------------------------+
+
+Buttons
+
+
+- [ ] topic 列表中显示 置顶 标签
+- [x] 细节
+    - [x] 用户userinfo 显示自己的所有的文章
+    - [x] 首页显示 最新的文章
+    - [x] 题目显示相关的讨论
     - 上面的只一参数不同的现一个操作
 - [ ] minibbs的实现
     - [ ] 留言功能 https://github.com/th720309/node_bbs
